log
Wed 20 Mar 2024 01:19:11 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
280a43c
Wed 20 Mar 2024 01:26:09 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: unknown type name ‘Node’
   64 |   Node* current = first(L);
      |   ^~~~
exercises.c:67:29: error: request for member ‘data’ in something not a structure or union
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
f9f45b1
Wed 20 Mar 2024 01:26:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: unknown type name ‘LIst’; did you mean ‘List’?
   64 |   LIst* current = first(L);
      |   ^~~~
      |   List
exercises.c:67:29: error: request for member ‘data’ in something not a structure or union
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
4ebc486
Wed 20 Mar 2024 01:26:43 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:29: error: invalid use of incomplete typedef ‘List’
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
f0177d7
Wed 20 Mar 2024 01:29:13 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
b58f6e5
Wed 20 Mar 2024 01:29:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:22: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   68 |       current = next(current);
      |                      ^~~~~~~
      |                      |
      |                      int *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘int *’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
66822a6
Wed 20 Mar 2024 01:29:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c3b0573
Wed 20 Mar 2024 02:08:58 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
c1a3f76
Sat 23 Mar 2024 08:47:05 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:105:9: error: implicit declaration of function ‘size_stack’ [-Werror=implicit-function-declaration]
  105 |   while(size_stack(P1) > 0)
      |         ^~~~~~~~~~
exercises.c:107:26: error: implicit declaration of function ‘top_stack’ [-Werror=implicit-function-declaration]
  107 |       int top_elemento = top_stack(P1);
      |                          ^~~~~~~~~
exercises.c:108:7: error: implicit declaration of function ‘pop_stack’; did you mean ‘popBack’? [-Werror=implicit-function-declaration]
  108 |       pop_stack(P1);
      |       ^~~~~~~~~
      |       popBack
exercises.c:109:7: error: implicit declaration of function ‘push_stack’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
  109 |       push_stack(P2, top_elemento);
      |       ^~~~~~~~~~
      |       pushBack
exercises.c:113:29: error: expected statement before ‘)’ token
  113 |   while(size_stack(aux) > 0))
      |                             ^
exercises.c:114:24: error: implicit declaration of function ‘tope_stack’ [-Werror=implicit-function-declaration]
  114 |     int top_elemento = tope_stack(aux);
      |                        ^~~~~~~~~~
exercises.c: At top level:
exercises.c:119:1: error: data definition has no type or storage class [-Werror]
  119 | destroy_stack(aux);
      | ^~~~~~~~~~~~~
exercises.c:119:1: error: type defaults to ‘int’ in declaration of ‘destroy_stack’ [-Werror=implicit-int]
exercises.c:119:1: error: parameter names (without types) in function declaration [-Werror]
cc1: all warnings being treated as errors
Compilation failed
d77a1dd
Sat 23 Mar 2024 09:23:48 PM UTC: 
 exercises.c | 29 +++++++++++++++--------------
 1 file changed, 15 insertions(+), 14 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:31: error: expected statement before ‘)’ token
  112 |   while(top(pila_aux) != NULL))
      |                               ^
Compilation failed
f0dc394
Sat 23 Mar 2024 09:23:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
a8b7493
Sat 23 Mar 2024 09:33:53 PM UTC: 
 exercises.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:48: error: expected expression before ‘||’ token
  142 |           if(*dato == '[' && cadena[i] == ']') || (*dato == '(' && cadena[i] == ')') || (*dato == '{' && cadena)
      |                                                ^~
Compilation failed
53c03af
Sat 23 Mar 2024 09:35:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:48: error: expected expression before ‘||’ token
  142 |           if(*dato == '[' && cadena[i] == ']') || (*dato == '(' && cadena[i] == ')') || (*dato == '{' && cadena[i] == '}')
      |                                                ^~
Compilation failed
29412b5
Sat 23 Mar 2024 09:35:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:62: error: called object is not a function or function pointer
  142 |           if(*dato == '[' && cadena[i] == ']') (*dato == '(' && cadena[i] == ')') (*dato == '{' && cadena[i] == '}')
      |                                                ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
exercises.c:142:117: error: expected ‘;’ before ‘{’ token
  142 |           if(*dato == '[' && cadena[i] == ']') (*dato == '(' && cadena[i] == ')') (*dato == '{' && cadena[i] == '}')
      |                                                                                                                     ^
      |                                                                                                                     ;
  143 |             {
      |             ~                                                                                                        
Compilation failed
684bb26
Sat 23 Mar 2024 09:36:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:142:27: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  142 |           if(*dato == '[' && cadena[i] == ']' || *dato == '(' && cadena[i] == ')' || *dato == '{' && cadena[i] == '}')
      |              ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
exercises.c:142:99: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  142 |           if(*dato == '[' && cadena[i] == ']' || *dato == '(' && cadena[i] == ')' || *dato == '{' && cadena[i] == '}')
      |                                                                                      ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c3a6a7
